<resources>
    <string name="app_name">Qual é a Capital?</string>
    <string name="qual_a_capital">Qual é a capital?</string>
    <string name="errado">ERRADO</string>
    <string name="ok">OK</string>
    <string name="correto">CORRETO</string>
    <string name="voc_ganhou_o_desafio">Você ganhou o desafio</string>
    <string name="direitos_autorais">PedroRezende©</string>
    <string name="bot_o_para_iniciar_o_quiz">Botão para iniciar o quiz</string>
    <string name="imagem_de_um_planeta">Imagem de um planeta</string>
    <string name="quiz">Quiz</string>
    <string name="null_value">---</string>
</resources>