<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/customize_layout"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="75dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="75dp" />

    <!--Input for user name-->

    <TextView
        android:id="@+id/tv_quizz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lilita_one"
        android:gravity="center"
        android:text="@string/quiz"
        android:textColor="@color/white"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@id/imageView"
        app:layout_constraintEnd_toStartOf="@id/guideEnd"
        app:layout_constraintStart_toEndOf="@id/guideStart"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:width="0dp"
        android:gravity="center"
        android:text="@string/qual_a_capital"
        android:fontFamily="@font/lilita_one"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/guideEnd"
        app:layout_constraintStart_toStartOf="@+id/guideStart"
        app:layout_constraintTop_toBottomOf="@id/tv_quizz" />

    <!--    app:tint="#F1BE06"-->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="250dp"
        android:layout_height="250dp"
        app:layout_constraintBottom_toTopOf="@id/btn_play"
        app:layout_constraintEnd_toEndOf="@id/guideEnd"
        app:layout_constraintStart_toStartOf="@id/guideStart"
        app:layout_constraintTop_toBottomOf="@id/tv_quizz"
        app:srcCompat="@drawable/ic_world"
        android:contentDescription="@string/imagem_de_um_planeta" />

    <TextView
        android:id="@+id/tv_congratulation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:width="0dp"
        android:gravity="center"
        android:text="@string/voc_ganhou_o_desafio"
        android:fontFamily="@font/lilita_one"
        android:textColor="#F1BE06"
        android:textSize="24sp"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@+id/guideEnd"
        app:layout_constraintStart_toStartOf="@+id/guideStart"
        app:layout_constraintTop_toBottomOf="@id/imageView" />


    <!--Home screen Buttons-->
    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btn_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/bot_o_para_iniciar_o_quiz"
        app:icon="@drawable/ic_play"
        app:iconSize="42dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideEnd"
        app:layout_constraintStart_toStartOf="@+id/guideStart"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:width="0dp"
        android:gravity="center"
        android:text="@string/direitos_autorais"
        android:fontFamily="@font/lilita_one"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>